# driftwm

./: CLAUDE.md  Cargo.toml  README.md  config.example.toml  flake.nix
assets/shaders/: compass_grid.glsl  dot_grid.glsl
config/: config.toml
config/waybar/: tray.jsonc
docs/: CAVEATS.md  DESIGN.md  explainer_prompt.md  multi-monitor.md  protocol-plan.md  shaders.md  smithay-api.md
extras/: config.toml
extras/scripts/: torture-test.sh  window-search.sh
extras/swaync/: style.css
extras/widgets/: common.py
resources/: driftwm-session  driftwm.desktop
src/: canvas.rs  cluster.rs  config.rs  decorations.rs  focus.rs  input.rs  lib.rs  main.rs  render.rs  snap.rs  state.rs  window_ext.rs  winit.rs
src/backend/: mod.rs  udev.rs  winit.rs
src/config/: defaults.rs  mod.rs  parse.rs  toml.rs  types.rs
src/grabs/: mod.rs  move_grab.rs  pan_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/input/: actions.rs  gestures.rs  mod.rs  pointer.rs
src/protocols/: foreign_toplevel.rs  screencopy.rs
src/shaders/: blur_down.glsl  blur_up.glsl  corner_clip.glsl  shadow.glsl
src/state/: animation.rs  fit.rs  fullscreen.rs  mod.rs  navigation.rs
tests/: canvas_navigation_test.rs  canvas_test.rs  canvas_transforms_test.rs  canvas_zoom_test.rs  config_bindings_test.rs  config_parse_test.rs  config_test.rs  config_toml_test.rs  snap_test.rs
widgets/: launch.sh  power_menu.py  power_widget.py
